# site-scout

./: .pre-commit-config.yaml  .taskcluster.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
src/site_scout/: __main__.py  args.py  browser_wrapper.py  explorer.py  fenix_wrapper.py  firefox_wrapper.py  main.py  reporter.py  site_scout.py  split_collection.py  test_args.py  test_explorer.py  test_fenix_wrapper.py  test_firefox_wrapper.py  test_main.py  test_reporter.py  test_site_scout.py  test_split_collection.py  test_url.py  test_url_collection.py  test_url_db.py  url.py  url_collection.py  url_db.py
src/site_scout/resources/: prefpicker.yml
