[metadata]
author = Tyson Smith
author_email = twsmith@mozilla.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
description = A tool to identify and report browser issues triggered by visiting a list of URLs.
keywords = automation testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = site-scout
url = https://github.com/MozillaSecurity/site-scout

[options]
include_package_data = True
install_requires =
    ffpuppet >= 0.13.1
    FuzzManager
    page-explorer >= 0.3.0
    prefpicker >= 1.1.0
    PyYAML
    tldextract >= 5.1.2
package_dir =
    = src
packages =
    site_scout
python_requires = >=3.9
zip_safe = False

[options.entry_points]
console_scripts =
    site-scout = site_scout.main:main
    url-collection = site_scout.url_collection:main

[options.extras_require]
dev =
    pre-commit
    tox
